# Hologlyph-Bots

./: README.md  requirements.txt
Arduino Code/bot_1_sub_node/: bot_1_sub_node.ino
Arduino Code/bot_2_sub_node/: bot_2_sub_node.ino
Arduino Code/bot_3_sub_node.ino/: bot_3_sub_node.ino.ino
Arduino Code/open_loop_bluetooth_control/: open_loop_bt.ino
STL files/: hb_task_3a_1523_Lower_base.STL  hb_task_3a_1523_Middle_base.STL  hb_task_3a_1523_Upper_base.STL
cam_calibration_640x480/: ost.txt  ost.yaml
hb_task1a_ws/: README.md
hb_task1a_ws/src/hb_task_1a/: package.xml  setup.cfg  setup.py
hb_task1a_ws/src/hb_task_1a/hb_task_1a/: task_1a_1523.py
hb_task1a_ws/src/install/: local_setup.sh  setup.sh
hb_task1a_ws/src/log/: latest_build
hb_task1a_ws/src/my_robot_controller/: package.xml  setup.py
hb_task1a_ws/src/rosbag2_2023_10_09-01_38_26/: metadata.yaml  rosbag2_2023_10_09-01_38_26_0.db3
hb_task1b_ws/: Readme.md
hb_task1b_ws/src/hb_task_1b/: setup.py  test001.py
hb_task1b_ws/src/hb_task_1b/hb_task_1b/: controller.py  (+1 more)
hb_task1b_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hb_task1b_ws/src/log/: latest_build
hb_task1b_ws/src/rosbag2_2023_10_31-11_59_56/: metadata.yaml  rosbag2_2023_10_31-11_59_56_0.db3
hb_task_2_ws/: README.md
hb_task_2_ws/src/hb_task2a/: package.xml  setup.py
hb_task_2_ws/src/hb_task2b/: setup.py
hb_task_4_ws/src/hb_task4c/: package.xml  setup.cfg  setup.py
hb_task_5_ws/src/hb_task5b/: package.xml  setup.cfg  setup.py
hb_task_6_ws/src/hb_task6_o/: package.xml  setup.cfg  setup.py
(+129 files in other folders)
